test_case/rust-lang_rust/58377_462412735_10.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/coercion/coerce-expect-unsized-ascribed.rs","byte_start":1022,"byte_end":1040,"line_start":21,"line_end":21,"column_start":13,"column_end":31,"is_primary":true,"text":[{"text":"    let _ = &{ |x| (x as u8) }: &Fn(i32) -> _; //~ ERROR mismatched types","highlight_start":13,"highlight_end":31}],"label":"expected trait std::ops::Fn, found closure","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"expected type `&dyn std::ops::Fn(i32) -> u8`\n   found type `&[closure@/checkout/src/test/ui/coercion/coerce-expect-unsized-ascribed.rs:21:16: 21:29]`","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0308]: mismatched types\n  --> /checkout/src/test/ui/coercion/coerce-expect-unsized-ascribed.rs:21:13\n   |\nLL |     let _ = &{ |x| (x as u8) }: &Fn(i32) -> _; //~ ERROR mismatched types\n   |             ^^^^^^^^^^^^^^^^^^ expected trait std::ops::Fn, found closure\n   |\n   = note: expected type `&dyn std::ops::Fn(i32) -> u8`\n              found type `&[closure@/checkout/src/test/ui/coercion/coerce-expect-unsized-ascribed.rs:21:16: 21:29]`\n\n"}
[01:05:24] {"message":"mismatched types","code":{"code":"E0308","explanation":"\nThis error occurs when the compiler was unable to infer the concrete type of a\nvariable. It can occur for several cases, the most common of which is a\nmismatch in the expected type that the compiler inferred for a variable's\ninitializing expression, and the actual type explicitly assigned to the\nvariable.\n\nFor example:\n\n